<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Screen3">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="215dp"
        tools:layout_editor_absoluteY="321dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                app:srcCompat="@android:drawable/btn_star_big_on"
                android:contentDescription="@string/todo5" />
            <ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                app:srcCompat="@android:drawable/btn_star_big_on"
                android:contentDescription="@string/todo6" />
            <ImageButton
                android:id="@+id/imageButton3"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                app:srcCompat="@android:drawable/btn_star_big_on"
                android:contentDescription="@string/todo7" />
            <ImageButton
                android:id="@+id/imageButton4"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                app:srcCompat="@android:drawable/btn_star_big_on"
                android:contentDescription="@string/todo8" />
            <ImageButton
                android:id="@+id/imageButton5"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                app:srcCompat="@android:drawable/btn_star_big_on"
                android:contentDescription="@string/todo10" />
            <ImageButton
                android:id="@+id/imageButton6"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                app:srcCompat="@android:drawable/btn_star_big_on"
                android:contentDescription="@string/todo11" />
            <ImageButton
                android:id="@+id/imageButton7"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                app:srcCompat="@android:drawable/btn_star_big_on"
                android:contentDescription="@string/todo9" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>